Notebooks/destination-rules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: carts
  namespace: sock-shop
spec:
  host: carts
  subsets:
  - labels:
      name: carts
      version: v1
    name: v1
  trafficPolicy:
    connectionPool:
      http:
        http1MaxPendingRequests: 1
        http2MaxRequests: 1
        maxRequestsPerConnection: 18
        maxRetries: 3491
      tcp:
        connectTimeout: 74ms
        maxConnections: 66
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: carts-db
  namespace: sock-shop
spec:
  host: carts-db
  subsets:
  - labels:
      name: carts-db
      version: v1
    name: v1
  trafficPolicy:
    connectionPool:
      http:
        http1MaxPendingRequests: 23
        http2MaxRequests: 806
        maxRequestsPerConnection: 17
        maxRetries: 125
      tcp:
        connectTimeout: 201ms
        maxConnections: 43
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: catalogue
  namespace: sock-shop
spec:
  host: catalogue
  subsets:
  - labels:
      name: catalogue
      version: v1
    name: v1
  trafficPolicy:
    connectionPool:
      http:
        http1MaxPendingRequests: 84
        http2MaxRequests: 410
        maxRequestsPerConnection: 273
        maxRetries: 78
      tcp:
        connectTimeout: 21ms
        maxConnections: 200
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: catalogue-db
  namespace: sock-shop
spec:
  host: catalogue-db
  subsets:
  - labels:
      name: catalogue-db
      version: v1
    name: v1
  trafficPolicy:
    connectionPool:
      http:
        http1MaxPendingRequests: 31
        http2MaxRequests: 1
        maxRequestsPerConnection: 44
        maxRetries: 1
      tcp:
        connectTimeout: 1ms
        maxConnections: 53
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: front-end
  namespace: sock-shop
spec:
  host: front-end
  subsets:
  - labels:
      name: front-end
      version: v1
    name: v1
  trafficPolicy:
    connectionPool:
      http: {}
      tcp: {}
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: orders
  namespace: sock-shop
spec:
  host: orders
  subsets:
  - labels:
      name: orders
      version: v1
    name: v1
  trafficPolicy:
    connectionPool:
      http:
        http1MaxPendingRequests: 170
        http2MaxRequests: 1975
        maxRequestsPerConnection: 201
        maxRetries: 86
      tcp:
        connectTimeout: 232ms
        maxConnections: 185
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: orders-db
  namespace: sock-shop
spec:
  host: orders-db
  subsets:
  - labels:
      name: orders-db
      version: v1
    name: v1
  trafficPolicy:
    connectionPool:
      http:
        http1MaxPendingRequests: 470
        http2MaxRequests: 943
        maxRequestsPerConnection: 8
        maxRetries: 1
      tcp:
        connectTimeout: 1074ms
        maxConnections: 1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: payment
  namespace: sock-shop
spec:
  host: payment
  subsets:
  - labels:
      name: payment
      version: v1
    name: v1
  trafficPolicy:
    connectionPool:
      http:
        http1MaxPendingRequests: 1
        http2MaxRequests: 202
        maxRequestsPerConnection: 1
        maxRetries: 52
      tcp:
        connectTimeout: 1179ms
        maxConnections: 39
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: queue-master
  namespace: sock-shop
spec:
  host: queue-master
  subsets:
  - labels:
      name: queue-master
      version: v1
    name: v1
  trafficPolicy:
    connectionPool:
      http:
        http1MaxPendingRequests: 98
        http2MaxRequests: 414
        maxRequestsPerConnection: 66
        maxRetries: 51
      tcp:
        connectTimeout: 201ms
        maxConnections: 52
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: rabbitmq
  namespace: sock-shop
spec:
  host: rabbitmq
  subsets:
  - labels:
      name: rabbitmq
      version: v1
    name: v1
  trafficPolicy:
    connectionPool:
      http:
        http1MaxPendingRequests: 1
        http2MaxRequests: 1
        maxRequestsPerConnection: 119
        maxRetries: 39
      tcp:
        connectTimeout: 151ms
        maxConnections: 92
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: session-db
  namespace: sock-shop
spec:
  host: session-db
  subsets:
  - labels:
      name: session-db
      version: v1
    name: v1
  trafficPolicy:
    connectionPool:
      http:
        http1MaxPendingRequests: 28
        http2MaxRequests: 1
        maxRequestsPerConnection: 87
        maxRetries: 4
      tcp:
        connectTimeout: 1ms
        maxConnections: 56
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: shipping
  namespace: sock-shop
spec:
  host: shipping
  subsets:
  - labels:
      name: shipping
      version: v1
    name: v1
  trafficPolicy:
    connectionPool:
      http:
        http1MaxPendingRequests: 92
        http2MaxRequests: 5
        maxRequestsPerConnection: 5
        maxRetries: 1
      tcp:
        connectTimeout: 226ms
        maxConnections: 2
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: user
  namespace: sock-shop
spec:
  host: user
  subsets:
  - labels:
      name: user
      version: v1
    name: v1
  trafficPolicy:
    connectionPool:
      http:
        http1MaxPendingRequests: 17
        http2MaxRequests: 88
        maxRequestsPerConnection: 81
        maxRetries: 43
      tcp:
        connectTimeout: 70ms
        maxConnections: 52
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: user-db
  namespace: sock-shop
spec:
  host: user-db
  subsets:
  - labels:
      name: user-db
      version: v1
    name: v1
  trafficPolicy:
    connectionPool:
      http:
        http1MaxPendingRequests: 61
        http2MaxRequests: 8
        maxRequestsPerConnection: 45
        maxRetries: 56
      tcp:
        connectTimeout: 12ms
        maxConnections: 64
